refactor: collect없이 list 반환